@@ -244,6 +244,9 @@ Working version
 
 ### Compiler user-interface and warnings:
 
+- #11679: Improve the error message about too many arguments to a function
+  (Jules Aguillon, review by Gabriel Scherer and Florian Angeletti)
+
 - #10009: Improve the error reported by mismatched struct/sig and =/: in module
   and module type bindings.
   (Jules Aguillon, review by Gabriel Scherer)
